// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /internships Internships_200 1`] = `
Object {
  "data": Array [
    Object {
      "additional": null,
      "address": "TEST",
      "city": "Brest",
      "country": "France",
      "createdAt": Any<String>,
      "description": "Stage",
      "endAt": 20191012,
      "id": 1,
      "isInternshipAbroad": true,
      "isValidated": false,
      "postalCode": "29280",
      "startAt": 20191012,
      "subject": "test",
      "updatedAt": Any<String>,
    },
  ],
  "length": 1,
  "max": 1,
  "page": 1,
}
`;

exports[`GET /internships/:id Internships_200 1`] = `
Object {
  "additional": null,
  "address": "TEST",
  "availableCampaign": null,
  "business": null,
  "category": null,
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "endAt": 20191012,
  "files": Array [],
  "id": Any<Number>,
  "isInternshipAbroad": true,
  "isValidated": false,
  "postalCode": "29280",
  "startAt": 20191012,
  "student": null,
  "subject": "test",
  "updatedAt": Any<String>,
  "validatedCampaign": null,
}
`;

exports[`GET /internships/:id/availableCampaigns Internships_200_WithLinkedData 1`] = `
Object {
  "createdAt": Any<String>,
  "description": "A description to test",
  "endAt": 20191012,
  "id": 1,
  "maxProposition": 2,
  "name": "test",
  "semester": "S5",
  "startAt": 0,
  "updatedAt": Any<String>,
}
`;

exports[`GET /internships/:id/businesses Internships_200_WithLinkedData 1`] = `
Object {
  "additional": null,
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "id": 1,
  "name": "test",
  "postalCode": "29200",
  "updatedAt": Any<String>,
}
`;

exports[`GET /internships/:id/internshipTypes Internships_200_WithLinkedData 1`] = `
Object {
  "createdAt": Any<String>,
  "id": 1,
  "label": "test",
  "updatedAt": Any<String>,
}
`;

exports[`GET /internships/:id/students Internships_200_WithLinkedData 1`] = `
Object {
  "createdAt": Any<String>,
  "email": "john.doe@enib.fr",
  "firstName": "John",
  "id": 1,
  "lastName": "Doe",
  "semester": "S10",
  "updatedAt": Any<String>,
}
`;

exports[`GET /internships/:id/validatedCampaigns Internships_200_WithLinkedData 1`] = `
Object {
  "createdAt": Any<String>,
  "description": "A description to test",
  "endAt": 20191012,
  "id": 3,
  "maxProposition": 2,
  "name": "test",
  "semester": "S5",
  "startAt": 0,
  "updatedAt": Any<String>,
}
`;

exports[`POST /internships ValidInternships_200 1`] = `
Object {
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "endAt": 20191012,
  "id": Any<Number>,
  "isInternshipAbroad": true,
  "isValidated": false,
  "postalCode": "29280",
  "startAt": 20191012,
  "subject": "test",
  "updatedAt": Any<String>,
}
`;

exports[`POST /internships/:id/availableCampaigns/:campaign_id/link Internships_200_WithCampaign 1`] = `
Object {
  "createdAt": Any<String>,
  "description": "A description to test",
  "endAt": 20191012,
  "id": 2,
  "maxProposition": 2,
  "name": "test",
  "semester": "S5",
  "startAt": 0,
  "updatedAt": Any<String>,
}
`;

exports[`POST /internships/:id/businesses/:business_id/link Internships_200_WithBusiness 1`] = `
Object {
  "additional": null,
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "id": 2,
  "name": "test",
  "postalCode": "29200",
  "updatedAt": Any<String>,
}
`;

exports[`POST /internships/:id/internshipTypes/:internship_type_id/link Internships_200_WithInternshipType 1`] = `
Object {
  "createdAt": Any<String>,
  "id": 2,
  "label": "test",
  "updatedAt": Any<String>,
}
`;

exports[`POST /internships/:id/students/:student_id/link Internships_200_WithStudent 1`] = `
Object {
  "createdAt": Any<String>,
  "email": "john.doe@enib.fr",
  "firstName": "John",
  "id": 2,
  "lastName": "Doe",
  "semester": "S10",
  "updatedAt": Any<String>,
}
`;

exports[`POST /internships/:id/validatedCampaigns/:campaign_id/link Internships_200_WithCampaign 1`] = `
Object {
  "createdAt": Any<String>,
  "description": "A description to test",
  "endAt": 20191012,
  "id": 4,
  "maxProposition": 2,
  "name": "test",
  "semester": "S5",
  "startAt": 0,
  "updatedAt": Any<String>,
}
`;

exports[`PUT /internships/:id Internships_200_NotAnyDataUpdated 1`] = `
Object {
  "additional": null,
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "endAt": 20191012,
  "id": Any<Number>,
  "isInternshipAbroad": true,
  "isValidated": false,
  "postalCode": "29280",
  "startAt": 20191012,
  "subject": "test",
  "updatedAt": Any<String>,
}
`;

exports[`PUT /internships/:id Internships_200_UpdateAllData 1`] = `
Object {
  "additional": "additional data",
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "endAt": 20191012,
  "id": Any<Number>,
  "isInternshipAbroad": true,
  "isValidated": false,
  "postalCode": "29280",
  "startAt": 20191012,
  "subject": "test",
  "updatedAt": Any<String>,
}
`;
